# brainfucker

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  brainfuck.cabal  brainfucker.cabal  circle.yml  package.yaml  pbcopy  stack.yaml
app/: Main.hs
src/: Brainfuck.hs  Brainfucker.hs  Main.hs  test.bfk
src/Brainfuck/: Cell.hs  Control.hs  Interaction.hs  Machine.hs  Parser.hs  Pointer.hs  Program.hs  Tape.hs
src/Brainfucker/: Machine.hs  Tape.hs
src/Data/: Brainfucker.hs
src/Data/Brainfucker/: AST.hs  Lex.hs  Tape.hs
src/Language/: Brainfuck.hs
src/Language/Brainfuck/: AST.hs  Cell.hs  Interpret.hs  Lex.hs  Tape.hs
test/: Doctest.hs
tests/: Test.hs  doctest.hs  doctests.hs  test.hs  tests.hs
tests/Brainfucker/: MachineSpec.hs  TapeSpec.hs
tests/Language/Brainfuck/AST/: Test.hs
tests/Language/Brainfuck/Cell/: QuickCheck.hs  Test.hs
tests/Language/Brainfuck/Interpret/: Test.hs
tests/Language/Brainfuck/Lex/: Test.hs
tests/Language/Brainfuck/Tape/: QuickCheck.hs  Test.hs
