name:     brainfucker
version:  0.1.0
synopsis: A simple Brainfuck interpreter
homepage: https://github.com/expede/brainfucker

license:      PublicDomain
license-file: LICENSE
author:       Brooklyn Zelenka
maintainer:   yourstruly@brooklynzelenka.com

category:           Interpreter
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.22

source-repository head
  type:     git
  location: https://github.com/expede/brainfucker

library
  ghc-options:       -Wall -fno-warn-unused-do-bind
  exposed-modules:   Data.Brainfucker.Tape
                    , Data.Brainfucker.AST
                    , Data.Brainfucker.Lex
                    , Data.Brainfucker
  build-depends:      base       >= 4.7  && < 5
                    , ListZipper >= 1.1  && < 2.0
                    , attoparsec >= 0.13 && < 1.0
                    , text       >= 1.2  && < 2.0
                    , free       >= 4.12 && < 5.0
  hs-source-dirs:     src
  default-language:   Haskell2010

executable brainfucker-commandline
  main-is:           Main.hs
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:      -Wall
  build-depends:    base       >= 4.7  && < 5
                  , ListZipper >= 1.1  && < 2.0
                  , attoparsec >= 0.13 && < 1.0
                  , text       >= 1.2  && < 2.0
                  , free       >= 4.12 && < 5.0
                  , brainfucker

test-suite tests
  default-language: Haskell2010
  ghc-options:     -Wall
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   tests
                  , src
                  , src/Brainfucker
  build-depends:    base
                  , containers
                  , hspec      >= 2.0 && < 3.0
                  , QuickCheck >= 2.7 && < 3.0
                  , ListZipper >= 1.2 && < 2.0

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test.hs
  build-depends:    base >= 4 && < 5
                  , tasty >= 0.7
                  , brainfucker

-- test-suite doctests
--   type:              exitcode-stdio-1.0
--   default-language:  Haskell2010
--   ghc-options:      -threaded
--   hs-source-dirs:    tests
--   main-is:           doctests.hs
--   build-depends:     base
--                    , doctest >= 0.9.13 && < 0.10
--                    , brainfucker
--                    , ListZipper >= 1.2 && < 2.0