name:     brainfucker
version:  0.4.0.3
synopsis: A simple Brainfuck interpreter
homepage: https://github.com/expede/brainfucker

license:      MIT
license-file: LICENSE
author:       Brooklyn Zelenka
maintainer:   yourstruly@brooklynzelenka.com

category:           Language
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.22

source-repository head
  type:     git
  location: https://github.com/expede/brainfucker

library
  ghc-options:      -Wall
  exposed-modules:   Language.Brainfuck
                   , Language.Brainfuck.AST
                   , Language.Brainfuck.Lex
                   , Language.Brainfuck.Tape
  build-depends:     base       >= 4.7  && < 5
                   , ListZipper >= 1.1  && < 2.0
                   , attoparsec >= 0.13 && < 1.0
                   , text       >= 1.2  && < 2.0
                   , free       >= 4.12 && < 5.0
  hs-source-dirs:    src
  default-language:  Haskell2010

executable brainfucker-cli
  main-is:           Main.hs
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:      -Wall
  build-depends:     base       >= 4.7  && < 5
                   , ListZipper >= 1.1  && < 2.0
                   , attoparsec >= 0.13 && < 1.0
                   , text       >= 1.2  && < 2.0
                   , free       >= 4.12 && < 5.0
                   , brainfucker

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Test.hs
  build-depends:    base  >= 4 && < 5
                  , tasty >= 0.7
                  , tasty-hunit      >= 0.9 && < 1.0
                  , tasty-smallcheck >= 0.8 && < 1.0
                  , smallcheck       >= 1.1 && < 2.0
                  , brainfucker

test-suite doctests
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:      -threaded
  hs-source-dirs:    tests
  main-is:           doctests.hs
  build-depends:     base
                   , doctest    >= 0.9 && < 1.0
                   , ListZipper >= 1.2 && < 2.0
                   , brainfucker